--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="text-end">
       <button type="button" class="btn btn-outline-light me-2">Login</button>
-      <a href="reg.html"><button type="button" class="btn btn-warning">Sign-up</button></a>
+      <button type="button" class="btn" style="background-color:#e500ff;">Sign-up</button>
     </div>
 </div>
 
@@ -55,314 +55,12 @@
                 </button>
             </div>
         </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
     </div>
-    <div id="grid">
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-        <div class="termék">
-            <div class="term_kép_div">
-                <img class="term_kép" src="képek/termékek/sapka.png" alt="product image">
-            </div>
-            <div class="term_név">
-                <b>bajuszbogre</b>
-            </div>
-            <div class="leírás">
-                Leírás
-            </div>
-            <div class="buttons">
-                <button class="cart">
-                    <img class="cart_img" src="képek/shopping_cart.jpg" alt="">
-                </button>
-                <button onclick="favorite()" class="fav">
-                    <img class="star" src="képek/rainbow_star_border.png" alt="fav">
-                </button>
-            </div>
-        </div>
-
-
-    </div>
+<script>
+function addtermék(db) {
+    for (let n=0,n<db,n++)
+    document.getElementById('termékek').innerHTML += '<div class="termék"><img class="term_kép" src="képek/termékek/sapka.png" alt="product image" style="border-radius:15px 15px 0 0;"><div class="term_név"><b>bajuszbogre</b></div><div class="leírás">Leírás</div><div class="buttons"><button class="cart"><img class="cart_img" src="képek/shopping_cart.jpg" alt=""></button><button onclick="favorite()" class="fav"><img class="star" src="képek/rainbow_star_border.png" alt="fav"></button></div></div>'
+}
+</script>
 </body>
 </html>
