--- a/bejelentkezés.html
+++ b/bejelentkezés.html
@@ -17,15 +17,29 @@ h1{margin-top:10px;}
 p{margin:16px 0 2px 0;font-size: 22px;width: fit-content;}
 </style>
 </head>
-<body>
-    <nav>
-    <a href="index.html">Home</a>
-    <a href="termek.html">Products</a>
-    <a href="cart.html">Cart</a>
-    <a href="reg.html">Registration</a>
-    <a href="bejelentkezés.html">Login</a>
-    </nav>
-</body>
+<body style="font-family:Arial, sans-serif;margin:0;padding:0;background-color:#a601b8;">
+<div style="background-color:#6e007a;box-shadow:0 0 12px 4px #6e007a;position:fixed;z-index:999;width:-webkit-fill-available;top:0;padding:8px;" class="d-flex flex-wrap align-items-center justify-content-center justify-content-between">
+    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <a href="index.html"><img src="képek/rainbow_star.png" alt="logo" style="width:40px;"></a>
+    </a>
+
+    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0" style="margin:0;">
+      <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
+      <li><a href="termek.html" class="nav-link px-2 text-white">Products</a></li>
+      <li><a href="cart.html" class="nav-link px-2 text-white">Cart</a></li>
+      <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+    </ul>
+    <h1 style="font-size:30px;color: aliceblue;margin:0;" class="me-lg-auto text-white ">POLLÁKSHOP</h1>
+
+    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+      <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
+    </form>
+
+    <div class="text-end">
+      <a href="bejelentkezés.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+      <a href="reg.html"><button type="button" class="btn" style="background-color:#e500ff;">Sign-up</button></a>
+    </div>
+</div>
 <main>
 <div id="card">
 <form action="bejelentkezés.html">
@@ -49,4 +63,5 @@ p{margin:16px 0 2px 0;font-size: 22px;width: fit-content;}
 
 
 </main>
+</body>
 </html>
