--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<style>
+<style>:root{--bs-btn-hover-color:white}
 #grid{margin:30px auto;display:grid;grid-template-columns:auto auto auto;justify-content:center;gap:20px;border:4px solid aliceblue}
 *{text-align:center;}
 </style>
@@ -32,19 +32,21 @@
     </form>
 
     <div class="text-end">
-      <button type="button" class="btn btn-outline-light me-2">Login</button>
-      <button type="button" class="btn" style="background-color:#e500ff;">Sign-up</button>
+      <a href="bejelentkezés.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+      <a href="reg.html"><button type="button" class="btn" style="background-color:#e500ff;">Sign-up</button></a>
     </div>
 </div>
 
     <div id="termékek">
     </div>
+    <p id="termekszam" style="font-size:30px;color:black;">20</p>
 <script>
-window.onload = addtermék(200)
+window.onload = addtermék(13)
 function addtermék(db) {
     for (n=0;n<db;n++) {
     document.getElementById('termékek').innerHTML += '<div class="termék"><img class="term_kép" src="képek/termékek/sapka.png" alt="product image" style="border-radius:15px 15px 0 0;"><div class="term_név"><b>bajuszbogre</b></div><div class="leírás">Leírás</div><div class="buttons"><button class="cart"><img class="cart_img" src="képek/shopping_cart.jpg" alt=""></button><button onclick="favorite()" class="fav"><img class="star" src="képek/rainbow_star_border.png" alt="fav"></button></div></div>'
-    }}
+        document.getElementById('termekszam').innerHTML = `${db}db termék található itt.`
+}}
 function favorite() {
     window.alert('kurva anyád')
 }
