--- a/bejelentkezés.html
+++ b/bejelentkezés.html
@@ -6,7 +6,7 @@
 <title>Webshop Navigation Bar</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<style>
+<style>:root{--bs-btn-hover-color:white}
 *{color: aliceblue;}
 #card{background:#6e007a;margin:10vw auto;width:fit-content
 ;border:2px double black;padding:15px;border-radius:20px;}
