--- a/reg.html
+++ b/reg.html
@@ -6,7 +6,7 @@
     <title>Webshop Navigation Bar</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<style>
+<style>:root{--bs-btn-hover-color:white}
 input{width:250px;height:30px;font-size:24px;border-radius: 6px;margin: auto;}
 input[type=submit]{width:250px;height:30px;font-size:24px;border-radius: 6px;margin: auto;float: right;}
 select{width:250px;height:30px;font-size:20px;border-radius: 6px;margin: auto;}
