--- a/termek.html
+++ b/termek.html
@@ -6,7 +6,7 @@
 <title>Webshop Navigation Bar</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<style>button:hover{color:white;}
+<style>button:hover{color:white;}:root{--bs-btn-hover-color:white}
 #termékb{width:40vw;height:90vh;background:white;margin:100px auto 0;border-radius:10px;overflow: hidden;}
 #term_nev{text-align: center;font-weight: 600;font-family:monospace;font-size:30px;padding:4px;margin:0;width:fit-content;}
 #left,#right{background:rgb(224, 224, 224);width:40vw;height:83vh;display:inline-block;margin:0 -4px 0 0;}
