--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body style="font-family:Arial, sans-serif;margin:0;padding:0;background-color:#a601b8;">
-<div style="background-color:#6e007a;box-shadow:0 0 12px 4px #6e007a;position:fixed;z-index:999;width:-webkit-fill-available;top:0;padding:8px;" class="d-flex flex-wrap align-items-center justify-content-center justify-content-between">
+<div id="nav" style="background-color:#6e007a;box-shadow:0 0 12px 4px #6e007a;position:fixed;z-index:999;width:-webkit-fill-available;top:0;padding:8px;" class="d-flex flex-wrap align-items-center justify-content-center justify-content-between">
     <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
         <a href="index.html"><img src="képek/rainbow_star.png" alt="logo" style="width:40px;"></a>
     </a>
@@ -50,7 +50,7 @@ function addtermék(db) {
         document.getElementById('termekszam').innerHTML = `${db}db termék található itt.`
 }}
 function favorite() {
-    window.alert('kurva anyád')
+    window.alert('nem')
 }
 </script>
 </body>
